[gd_scene load_steps=21 format=3 uid="uid://bdl8iu6yg6mvf"]

[ext_resource type="Script" uid="uid://b008yqn47sqrt" path="res://Scenes/main_game.gd" id="1_0e3vx"]
[ext_resource type="Texture2D" uid="uid://cjv17lwy7opo0" path="res://Assets/Square.png" id="1_l756w"]
[ext_resource type="Texture2D" uid="uid://cydgk84fnylsv" path="res://Assets/Round.png" id="4_6j5ir"]
[ext_resource type="Texture2D" uid="uid://cpn7uhrd8kfg4" path="res://Assets/Triangle.png" id="5_mgc0q"]
[ext_resource type="Script" uid="uid://dp18shbsmpk2q" path="res://Scenes/platform.gd" id="6_bb2iq"]

[sub_resource type="Gradient" id="Gradient_pu3va"]
colors = PackedColorArray(0.62229407, 0.49875122, 0, 1, 1, 0.7337273, 0.57110375, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0e3vx"]
gradient = SubResource("Gradient_pu3va")

[sub_resource type="LabelSettings" id="LabelSettings_6j5ir"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_mgc0q"]
bounce = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6j5ir"]
size = Vector2(102, 856)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_18r40"]
bounce = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgc0q"]
size = Vector2(105, 856)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bb2iq"]
size = Vector2(127, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18r40"]
size = Vector2(109, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6y7pd"]
size = Vector2(103, 65)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0e3vx"]
bounce = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_73nn6"]
radius = 54.065807

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6j5ir"]
bounce = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_r0mdn"]
radius = 52.830963

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bb2iq"]
bounce = 1.0

[node name="MainGame" type="Node2D"]
script = ExtResource("1_0e3vx")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(400.50003, 388)
rotation = -1.5707964
scale = Vector2(3.3398438, 886)
texture = SubResource("GradientTexture1D_0e3vx")

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 361.0
offset_top = 9.0
offset_right = 422.0
offset_bottom = 32.0
scale = Vector2(1.5, 1.5)
text = "Score: 0"
label_settings = SubResource("LabelSettings_6j5ir")

[node name="LeftWall" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_mgc0q")

[node name="Sprite2D" type="Sprite2D" parent="LeftWall"]
modulate = Color(0, 0, 0, 1)
position = Vector2(9.25, 387.50006)
scale = Vector2(0.8495935, 6.6640635)
texture = ExtResource("1_l756w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(9, 389)
shape = SubResource("RectangleShape2D_6j5ir")

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(783, 0)
physics_material_override = SubResource("PhysicsMaterial_18r40")

[node name="Sprite2D" type="Sprite2D" parent="RightWall"]
modulate = Color(0, 0, 0, 1)
position = Vector2(9.25, 387.50006)
scale = Vector2(0.8495935, 6.6640635)
texture = ExtResource("1_l756w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(10.5, 387)
shape = SubResource("RectangleShape2D_mgc0q")

[node name="RedBlockLeft" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="RedBlockLeft"]
modulate = Color(1, 0, 0, 1)
position = Vector2(146.25002, 782)
scale = Vector2(1.389, 0.5)
texture = ExtResource("1_l756w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedBlockLeft"]
position = Vector2(126.5, 836)
shape = SubResource("RectangleShape2D_bb2iq")

[node name="RedBlockRight" type="Area2D" parent="."]
position = Vector2(510, 0)

[node name="Sprite2D" type="Sprite2D" parent="RedBlockRight"]
modulate = Color(1, 0, 0, 1)
position = Vector2(144.91325, 782)
scale = Vector2(1.3672643, 0.5)
texture = ExtResource("1_l756w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedBlockRight"]
position = Vector2(172.5, 836)
shape = SubResource("RectangleShape2D_18r40")

[node name="GreenBlock" type="Area2D" parent="."]
position = Vector2(260, 0)

[node name="Sprite2D" type="Sprite2D" parent="GreenBlock"]
modulate = Color(0, 1, 0, 1)
position = Vector2(146.25002, 782)
scale = Vector2(1.389, 0.5)
texture = ExtResource("1_l756w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GreenBlock"]
position = Vector2(149.5, 836.5)
shape = SubResource("RectangleShape2D_6y7pd")

[node name="BallOne" type="StaticBody2D" parent="."]
position = Vector2(274, 773)
scale = Vector2(1.5, 1.5)
physics_material_override = SubResource("PhysicsMaterial_0e3vx")

[node name="Sprite2D" type="Sprite2D" parent="BallOne"]
texture = ExtResource("4_6j5ir")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallOne"]
shape = SubResource("CircleShape2D_73nn6")

[node name="BallOne2" type="StaticBody2D" parent="."]
position = Vector2(544, 773.00006)
scale = Vector2(1.5, 1.5)
physics_material_override = SubResource("PhysicsMaterial_6j5ir")

[node name="Sprite2D" type="Sprite2D" parent="BallOne2"]
texture = ExtResource("4_6j5ir")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallOne2"]
shape = SubResource("CircleShape2D_r0mdn")

[node name="Platform" type="AnimatableBody2D" parent="."]
position = Vector2(406, 610)
physics_material_override = SubResource("PhysicsMaterial_bb2iq")
script = ExtResource("6_bb2iq")

[node name="Sprite2D" type="Sprite2D" parent="Platform"]
modulate = Color(2.4065375e-07, 0.35897717, 0.35897714, 1)
scale = Vector2(1, 0.3)
texture = ExtResource("5_mgc0q")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platform"]
polygon = PackedVector2Array(2, -22, -86, 21, 90, 21)

[connection signal="area_entered" from="RedBlockLeft" to="." method="_on_red_block_left_area_entered"]
[connection signal="body_entered" from="RedBlockLeft" to="." method="_on_red_block_left_body_entered"]
[connection signal="body_entered" from="RedBlockRight" to="." method="_on_red_block_right_body_entered"]
[connection signal="area_entered" from="GreenBlock" to="." method="_on_green_block_area_entered"]
[connection signal="body_entered" from="GreenBlock" to="." method="_on_green_block_body_entered"]
